<resources>
    <string name="app_name">Popular Movies</string>
    <string name="detail_activity_title">Movie Details</string>
    <string name="settings_activity_title">Settings</string>
    <string name="iv_poster_description">Movie poster</string>
    <string name="year_example">2017</string>
    <string name="movie_overview_example">The Imperial Forces — under orders from cruel Darth Vader (David Prowse) — hold Princess Leia (Carrie Fisher) hostage, in their efforts to quell the rebellion against the Galactic Empire. Luke Skywalker (Mark Hamill) and Han Solo (Harrison Ford), captain of the Millennium Falcon, work together with the companionable droid duo R2-D2 (Kenny Baker) and C-3PO (Anthony Daniels) to rescue the beautiful princess, help the Rebel Alliance, and restore freedom and justice to the Galaxy.</string>
    <string name="movie_votes_example">8.7 (30241)</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_sort_order_key">pref_sort_order_key</string>
    <string name="movie_title_long_example">A Really Long Movie Title Pt. 2, Episode IX</string>
    <string name="backdrop_description">Backdrop image</string>

    <string name="title_pref_sort_by">Sort by</string>
    <string name="pref_sort_by_default">@string/pref_sort_by_popularity</string>
    <string name="pref_sort_by_popularity">popularity.desc</string>
    <string name="pref_sort_by_votes">vote_average.desc</string>
    <string name="pref_sort_by_favorite">favorite</string>

</resources>
