<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinator_layout_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <net.opacapp.multilinecollapsingtoolbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/collapsing_toolbar_height"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/primary_dark"
                app:expandedTitleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded.Shadow"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:maxLines="3">

                <ImageView
                    android:id="@+id/iv_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/backdrop_description"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin">

                </android.support.v7.widget.Toolbar>

            </net.opacapp.multilinecollapsingtoolbar.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="185dp"
                    android:layout_height="277dp"
                    android:contentDescription="@string/iv_poster_description"
                    android:scaleType="centerCrop"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/placeholder" />

                <TextView
                    android:id="@+id/tv_year"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintLeft_toRightOf="@+id/iv_poster"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/year_example" />

                <TextView
                    android:id="@+id/tv_votes"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_year"
                    app:layout_constraintTop_toBottomOf="@+id/tv_year"
                    tools:text="@string/movie_votes_example" />

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:ellipsize="end"
                    android:maxLines="10"
                    android:textStyle="italic"
                    app:layout_constraintLeft_toRightOf="@id/iv_poster"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_votes"
                    tools:text="@string/movie_overview_example" />

                <LinearLayout
                    android:id="@+id/video_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/iv_poster"
                    />

                <ToggleButton
                    android:id="@+id/toggle_favortie"
                    style="@style/ImageToggle"
                    android:layout_width="@dimen/toggle_size"
                    android:layout_height="@dimen/toggle_size"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:background="@drawable/image_toggle_background_favorite"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_year" />

                <LinearLayout
                    android:id="@+id/review_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/video_list" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>
